# cugo

./: README.md
cugo_bringup/: CMakeLists.txt  package.xml
cugo_bringup/launch/: cugo_bringup.launch
cugo_detection/: CMakeLists.txt  package.xml
cugo_detection/config/: detection.yaml
cugo_detection/include/: object_detection.h
cugo_detection/launch/: cugo_detection.launch
cugo_detection/src/: image_converter.cpp  object_detection.cpp
cugo_teleop/: CMakeLists.txt  README.md  package.xml
cugo_teleop/config/: camera.yaml
cugo_teleop/launch/: cubase.launch  cugo_teleop.launch
cugo_teleop/scripts/: cubase.py  cubase_teleop.py  cugo_teleop.py  old_motor.py
