<?xml version="1.0"?>
<package format="2">
  <name>cugo_bringup</name>
  <version>0.0.0</version>
  <description>The cugo_bringup package</description>

  <maintainer email="h.shunji1206@gmail.com">hashimoto</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
